--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.10.1",
     "@expo/vector-icons": "^15.0.3",
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.20",
+    "@gluestack-ui/core": "^3.0.10",
     "@gluestack-ui/themed": "^1.1.73",
+    "@gluestack-ui/utils": "^3.0.11",
+    "@legendapp/motion": "^2.4.0",
     "@react-native-aria/focus": "^0.2.9",
     "@react-native-aria/interactions": "^0.2.16",
     "@react-native-aria/overlays": "^0.3.15",
@@ -34,23 +38,28 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
-    "nativewind": "^4.2.1",
+    "nativewind": "^4.1.23",
     "react": "19.1.0",
+    "react-aria": "^3.33.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.2",
+    "react-native-svg": "^15.13.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.17"
+    "react-native-worklets": "^0.5.1",
+    "react-stately": "^3.39.0",
+    "tailwind-variants": "^0.1.20"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
   "private": true
