--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@supabase/supabase-js": "^2.97.0",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.5",
     "expo": "~54.0.33",
+    "expo-auth-session": "^7.0.10",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
