--- a/app.json
+++ b/app.json
@@ -46,6 +46,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "92c86005-b6d1-4cd3-8122-726a61bceec5"
+      }
     }
   }
 }
